# LAB1

./: .gitignore  CMakeLists.txt
LAB1/: CMakeLists.txt  LAB1.cpp  LAB1.h
